// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glob should recursively match files relative to current dir 1`] = `
Array [
  "/test/fixtures/glob/index.js",
  "/test/fixtures/glob/test.js",
]
`;

exports[`glob should recursively match files relative to current dir 2`] = `
Array [
  "/test/fixtures/glob/1/index.js",
  "/test/fixtures/glob/1/test.js",
  "/test/fixtures/glob/index.js",
  "/test/fixtures/glob/test.js",
]
`;

exports[`glob should recursively match files relative to current dir 3`] = `
Array [
  "/test/fixtures/glob/1/2/3/index.js",
  "/test/fixtures/glob/1/2/3/test.js",
  "/test/fixtures/glob/1/2/index.js",
  "/test/fixtures/glob/1/2/test.js",
  "/test/fixtures/glob/1/index.js",
  "/test/fixtures/glob/1/test.js",
  "/test/fixtures/glob/index.js",
  "/test/fixtures/glob/test.js",
]
`;
